# AlphaDiep

./: .gitignore  README.md  TRAINING.md  pyproject.toml
.github/workflows/: python-check.yml
conformance/: README.md
conformance/entity-core/: compare-parity.js  report-ts.js
conformance/fixtures/: gameplay-golden.json
conformance/gameplay/: benchmark-parity.js  compare-parity.js  report-ts.js
conformance/headless/: benchmark-headless.js  determinism.test.js  pettingzoo-env.test.js  python-ctypes.test.js  python_combat_observation_parity.py  python_combat_observation_smoke.py  python_gym_combat_wrapper_smoke.py  python_pettingzoo_api_test.py  python_pettingzoo_smoke.py
conformance/headless-parity/: compare-constructor-parity.js
conformance/physics/: compare-parity.js  report-ts.js
conformance/protocol/: compare-parity.js  golden.test.js  report-ts.js
cpp/: PARITY.md  README.md
cpp-build/: README.md
cpp/src/: headless.cpp  physics.cpp
cpp/tests/: headless_smoke_test.cpp
cpp/tools/: generate_headless_tank_defs.py  headless_main.cpp
rl/: __init__.py
rl/env/: README.md  auto_upgrade.py  auto_upgrade_example.py  headless.py  pettingzoo_env.py
rl/observability/: README.md  __init__.py  config.py
rl/runtime/: DiepModelConfig.py  generate_training_video.py  ghost_model.md  league_codec.py  lean_checkpoint.py  model_store.py  random_pick.py  ray_code.py  resume_from_checkpoint.py  rewards.py  (+4 more)
test/: README.md
training_data/: README.md
ts-client/: README.md
ts-server/: README.md  config.ts  package.json  tsconfig.json  tsup.config.ts
(+54 files in other folders)
