[project]
name = "AlphaDiep"
version = "0.0.1"
description = "RL Training for Agents playing Diep.io"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.23.0",
    "pettingzoo>=1.24.0",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
    "pytest>=7.0",
    "ray[rllib]>=2.10.0",
    "redis>=5.0.0",
    "safetensors>=0.4.0",
    "torch>=2.0.0",
    "wandb>=0.17.0",
    "zstandard>=0.22.0",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
pythonpath = [
  ".",
  "rl/runtime"
]
addopts = "-q"